--- a/cv-vitae/schneeman-brent-resume.Rmd
+++ b/cv-vitae/schneeman-brent-resume.Rmd
@@ -101,12 +101,12 @@ my_experience <- tibble::tribble(
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Strengthened Algorithmic and Machine Learning muscle through project-based leadership. Partnering with disparate product lines to answer questions quicker, and find new questions faster. Evangelized data-informed decision making across company and with key executives, leading to the formation of the HomeAway Data Science Team. Built and directed 25 person team consisting of PhD Data Scientists and Machine Learning Engineers",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Team projects included competitive intelligence, fraud detection, bot detection, unstructured and semi-structured data mining, search result ranking, photo analysis, and price and occupancy predictions",
     "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Partnered with the UT McCombs School of Business, providing hiring-manager guidance and data for the Masters of Science Business Analytics program. Hired 3 graduates from the program (see Volunteering section below)",
-  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Individual contributor on ML modeling for consumer facing chatbot. Duties included labeling data, building LSTM-based intent classifier (in Keras), collaborating with data and software engineering to determine application architecture",
+  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Individual contributor on ML modeling for consumer facing chatbot. Duties included labeling data, building Deep Learning-based intent classifier (in Keras), collaborating with data and software engineering to determine application architecture",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created experience-based recommendation service that found activities in one location that are similar to activities in another. A word2vec-based latent embedding space was used to find the similar activities",
     "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created photo-similarity service that allowed clients to explore images of properties that are similar to another properties photos. An 'image2vec' vector space was built from images and the service navigated that space",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created Machine Learning pipeline in collaboration with infrastructure team within HomeAway to aid model production and deployment",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created Data Science Internship Program for HomeAway University",
-    "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Using R and later Spark, created models that compared geographic representation of HomeAway properties with the representation from a competitor. Initially, Natural Language Processing techniques such as TF-IDF vectors were built from property descriptions and distances measured between those vectors determined duplicate or unique properties, but LDA distributions were leveraged as the project matured. A similar transition from R to Spark occurred as the need for greater parallelization became apparent",
+    "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Using single compute nodes and later Spark, created models that compared geographic representation of HomeAway properties with the representation from a competitor. Initially, Natural Language Processing techniques such as TF-IDF vectors were built from property descriptions and distances measured between those vectors determined duplicate or unique properties, but LDA distributions were leveraged as the project matured. A similar transition from single compute resources to Spark occurred as the need for greater parallelization became apparent",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Bayesian and frequentist multi-variate test analysis in R",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Introduced natural language processing, machine learning, and defensible statistical inference",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Multiple team and individual presentations on ML efforts and affects to C-level audiences",
