--- a/cv-vitae/schneeman-brent-resume.Rmd
+++ b/cv-vitae/schneeman-brent-resume.Rmd
@@ -22,21 +22,23 @@ library(vitae)
 ```
 
 # Overview
-AI and machine learning executive building teams and strategies to deploy algorithmic models in real-time customer facing applications. 
 
-Broad leadership experience across data scientists, software engineers, data analysts, and data engineers, having scaled-from-zero durable teams across disciplines and companies. My software engineering and leadership skills greatly facilitated my re-focus on data science and machine learning as writing code enabled rapid learning and hypothesis testing. Adept at combining engineering and science to help companies unlock the value of their data as they pivot to modern algorithmic-based business models. Overseen and architected data solutions to provide APIs and platforms which expose ML and AI to stakeholders and bring strong hands-on experience in machine learning project, natural language processing (NLP) and computer vision (CV).
+AI and machine learning executive building teams, products, processes, and strategies to deploy algorithmic models in real-time customer facing applications.
+
+Broad leadership experience across data scientists, software engineers, data analysts, and data engineers, having scaled-from-zero durable teams across disciplines and companies. Mixes software engineering, machine learning, and leadership skills to focus on rapid learning and hypothesis testing. Adept at combining engineering and science to help companies both unlock the value of data and create new products as they pivot to modern algorithmic-based business models. Led and implemented data solutions to provide APIs and platforms which expose ML and AI to stakeholders and bring strong hands-on experience in Artificial Intelligence, machine learning projects, natural language processing (NLP) and computer vision (CV).
 
 Active in local meetups and conferences, presenting on a variety of Data Science and Machine Learning topics, as well as being an Advisory Board Member for UT-Austin, McCombs School of Business Masters of Science Business Analytics program since 2015.
 
 # Expertise
 
 ## Organizational
+
 ```{r organizational}
 my_expertise <- tibble::tribble(
   ~item, ~desc,
-  "Project Management", "Agile, Scrum, Kanban",
-  "Collaboration", "Strategic thinking, Engineering and Science leadership, C-Level advisor, Team design",
-  "Miscellaneous", "Operationalizing algorithms, Product orientation, Academic liason, Curricula design"
+  "Project Management", "Agile, Scrum, Kanban, Deterministic and Probabilistic",
+  "Collaboration", "Strategic thinking, Engineering and Science leadership, C-Level adviser, Team design",
+  "Miscellaneous", "Operationalizing algorithms, Product orientation, Academic liaison, Curricula design"
 )
  
 my_expertise %>% 
@@ -45,6 +47,7 @@ my_expertise %>%
 ```
 
 # Experience
+
 ```{r experience}
 my_experience <- tibble::tribble(
   ~title, ~start, ~end, ~company, ~why,
@@ -52,21 +55,23 @@ my_experience <- tibble::tribble(
   # The Overhaul Experience
   
   
-  "Vice President, Data Science and Analytics", "June 2020", "August 2022", "Overhaul, Inc", "First hire with data-specific focus, builing Data organizaion with Data Engineering, Data Analytics, Data Science and Machine Learning focus. Guided by collaboration, built team to deliver internal and external data-as-a-product features (e.g. reports, data assets). Provided direction for machine learning and data transformation pipelines, and for a robust data warehouse strategy. Resulted in massive automation of data delivery to end customers (thereby realizing operational efficiencies). ML efforts included transportation duration models, scoring of security events, and agent-based modeling of backhaul opportunities.",
-  "Vice President, Data Science and Analytics", "June 2020", "August 2022", "Overhaul, Inc", "Six-month expat assignment in 2022 to build Data Science and Engineering team in Ireland. Partnered with local recruiters, local groups and universities to build recruitment pipeline and better understand European hiring processes and talent.",
+  "Vice President, Data Science and Analytics", "June 2020", "August 2022", "Overhaul, Inc", "First hire with data-specific focus, built Data organization with Data Engineering, Data Analytics, Data Science and Machine Learning focus. Guided by collaboration with stakeholders, built team to deliver internal and external data-as-a-product features (e.g. reports, data assets). Provided direction for machine learning and data transformation pipelines, and for a robust data warehouse strategy. Achieved massive automation of data delivery to end customers (thereby realizing operational inefficiencies). ML efforts included transportation duration models, scoring of security events, and agent-based modeling of backhaul opportunities",
+  "Vice President, Data Science and Analytics", "June 2020", "August 2022", "Overhaul, Inc", "Six-month international assignment in 2022 to build Data Science and Engineering team in Ireland. Collaborated with local recruiters, groups and universities to build recruitment pipeline and better understand European hiring processes and talent. Resulted in data science and machine learning hires in-country",
+    "Vice President, Data Science and Analytics", "June 2020", "August 2022", "Overhaul, Inc", "Technical architect, team lead, and main SQL contributor to Prefect- and DBT-based data pipeline to populate Snowflake data warehouse. Ensured predictability, explainability, and observability to analytic data",
+    "Vice President, Data Science and Analytics", "June 2020", "August 2022", "Overhaul, Inc", "Hired 8-person international team of Business Intelligence Developers, Data Scientists, Data Engineers, and Machine Learning Engineers",
   
   # The Alegion Experience
   
-  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Ideated and architected Active Learning workflow coupling machine learning with human annotators, which provides significant workflow efficiency. Delivered Sagemaker-based solution in 2019 for image classification and object detection; delivering Kubeflow and DVC based solution in 2020, focusing on computer vision and natural language processing capabilities",  
+  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Ideated, proposed, and implemented Active Learning workflow coupling machine learning with human annotators, which provides significant workflow efficiency. Delivered Sagemaker-based solution in 2019 for image classification and object detection; delivered Kubeflow and DVC based solution in 2020, focusing on computer vision and natural language processing capabilities",  
   "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Identified new product opportunities and developed new SKUs for Sales team",
-  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Manage machine learning engineering and architecture team responsible for creating human-in-the-loop machine learning capabilities into the core product",
-  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Assume roles of engineering leader, scrummaster, product owner, and team member as appropriate; skilled at blending Machine Learning and Software Engineering process techniques to deliver ML-based solutions",
-  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Implemented and directed Alegion's intellectual property program by liaisoning between outside Counsel, internal inventors, and executive sponsors",
-  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Active in local meetups, scheduled to speak at Data Day Texas in January 2020",
+  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Led machine learning engineering and architecture team responsible for creating human-in-the-loop machine learning capabilities into the core product",
+  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Assume roles of engineering leader, scrum master, product owner, and team member as appropriate; skilled at blending Machine Learning and Software Engineering process techniques to deliver ML-based solutions",
+  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Implemented and directed Alegion's intellectual property program by liaising between outside Counsel, internal inventors, and executive sponsors",
+  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Active in local meetups, spoke at Data Day Texas in January 2020",
   "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", 
   "Delivered Computer Vision solution using AWS Sagemaker and Faster R-CNN-based for object classification and detection for customer-specific video and image use cases. ML improved throughput by 30% over the fully-manual process, and uses AWS Lambda functions and SQS messaging", 
     "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", 
-  "Led efforts for cross-frame entity resolution of objects in videos. Current heuristic approach determined \`good enough\` relative to ML/AI approaches. Team deployed to higher ROI efforts", 
+  "Led efforts for cross-frame entity resolution of objects in videos. Then-current heuristic approach determined \`good enough\` relative to ML/AI approaches. Team deployed to higher ROI efforts", 
   "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", 
   "Delivered Kubeflow, Kubernetes, Weights and Biases-based metrics, and DVC-based ML infrastructure, focusing on computer vision and natural language processing capabilities. This provides alternatives to the Sagemaker efforts, and gives greater model composition, reproducibility and data tracking. Target use cases for computer vision and NLP",  
   "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Personally built, trained and deployed color-classification CNN-based model for retail fashion catalog. Leveraged aforementioned ML infrastructure. Model allows Alegion to by-pass Crowd for certain color classes, greatly increasing margin",
@@ -74,15 +79,15 @@ my_experience <- tibble::tribble(
   "Architected and led delivery of Active Learning workflow coupling machine learning with human annotators, which provides significant workflow efficiency, chiefly for image annotation tasks. System deployed on Kubernetes-based infrastructure hosted on Amazon Web Services (AWS)",
   "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Identified new product opportunities and developed new SKUs for efficient sales penetration, based on real-world machine learning engineering processes and rapid hypothesis testing",
     "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Collaborate with VP Sales and CEO to provide high-touch contract negotiations with key customers. Provide superlative support for Sales in front of these customers",
-  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Manage machine learning engineering and architecture team responsible for creating human-in-the-loop machine learning capabilities into the core product",
-  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Assumed roles of engineering leader, scrummaster, product owner, and team member as appropriate; skilled at blending Machine Learning and Software Engineering process techniques to deliver ML-based solutions",
+  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Built and led machine learning engineering and architecture team responsible for creating human-in-the-loop machine learning capabilities into the core product",
+  "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Assumed roles of engineering leader, scrum master, product owner, and team member as appropriate; skilled at blending Machine Learning and Software Engineering process techniques to deliver ML-based solutions",
   "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Implemented and directed Alegion's intellectual property program by liaising between outside Counsel, internal inventors, and executive sponsors",
   "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Active in local meetups, spoke at Data Day Texas in January 2020",
   "Senior Director, Machine Learning", "March 2019", "April 2020", "Alegion, Inc", "Reporting to Vice President, Engineering; dotted line to CTO",
   
   # UT MSBA Experience
   
-  "Industry Advisor", "2015", "", "UT McCombs School of Business", "Advising McCombs on current industry needs for the Masters of Science Business Analytics curricula, including Database, Data engineering and ML modeling concepts. Ran three capstone projects. Hired three graduates and was influential in the hiring of four more.",
+  "Industry Adviser", "2015", "", "UT McCombs School of Business", "Advising McCombs on current industry needs for the Masters of Science Business Analytics curricula, including Database, Data engineering and ML modeling concepts. Ran three capstone projects. Hired three graduates and was influential in the hiring of four more.",
 
   # The DOSH Experience
   
@@ -96,11 +101,11 @@ my_experience <- tibble::tribble(
   
   # The HomeAway Experience
   
-  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Manage, Bootstrap, and Provide Strategic Vision for data science initiatives, such as Inventory Ranking and Optimization, Content Recommendations, Marketplace Health, Image Quality, Chatbot AI Services, and other business critical efforts",
+  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Manage, Bootstrap, and Provide Strategic Vision for data science initiatives, such as Inventory Ranking and Optimization, Content Recommendations, Marketplace Health, Image Quality, Chat bot AI Services, and other business critical efforts",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Strengthened Algorithmic and Machine Learning muscle through project-based leadership. Partnering with disparate product lines to answer questions quicker, and find new questions faster. Evangelized data-informed decision making across company and with key executives, leading to the formation of the HomeAway Data Science Team. Built and directed 25 person team consisting of PhD Data Scientists and Machine Learning Engineers",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Team projects included competitive intelligence, fraud detection, bot detection, unstructured and semi-structured data mining, search result ranking, photo analysis, and price and occupancy predictions",
     "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Partnered with the UT McCombs School of Business, providing hiring-manager guidance and data for the Masters of Science Business Analytics program. Hired 3 graduates from the program (see Volunteering section below)",
-  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Individual contributor on ML modeling for consumer facing chatbot. Duties included labeling data, building Deep Learning-based intent classifier (in Keras), collaborating with data and software engineering to determine application architecture",
+  "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Individual contributor on ML modeling for consumer facing chat bot. Duties included labeling data, building Deep Learning-based intent classifier (in Keras), collaborating with data and software engineering to determine application architecture",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created experience-based recommendation service that found activities in one location that are similar to activities in another. A word2vec-based latent embedding space was used to find the similar activities",
     "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created photo-similarity service that allowed clients to explore images of properties that are similar to another properties photos. An 'image2vec' vector space was built from images and the service navigated that space",
   "Senior Director, Data Science", "Jul 2014", "Dec 2017", "HomeAway, an Expedia Company", "Created Machine Learning pipeline in collaboration with infrastructure team within HomeAway to aid model production and deployment",
@@ -126,7 +131,7 @@ my_experience <- tibble::tribble(
   
   "Principal Software Engineer", "Mar 2007", "Jun 2010", "PayPal, Inc", "Implemented two-factor authentication system (via hardware token) for PayPal and eBay",
     "Principal Software Engineer", "Mar 2007", "Jun 2010", "PayPal, Inc", "Formed small team to introduce Agile Software Development methodologies to PayPal, received executive support and developed training material",
-  "Principal Software Engineer", "Mar 2007", "Jun 2010", "PayPal, Inc", "(Certified) Scrummaster for next-gen (now current gen) view-layer technology",
+  "Principal Software Engineer", "Mar 2007", "Jun 2010", "PayPal, Inc", "(Certified) Scrum master for next-gen (now current gen) view-layer technology",
   "Engineering Manager, Software Development", "Mar 2008", "Jul 2009", "PayPal, Inc", "Led development of the content management system for PayPal's marketing department",
   
   # The VISA Experience
@@ -137,11 +142,7 @@ my_experience <- tibble::tribble(
   
   "Software Engineer", "Nov 2000", "Mar 2007", "Visa, Inc", "Developed reference standard Directory Server for Verified by Visa(tm) implementation of the Three D Secure payment protocol",
   
-  "Software Engineer", "Nov 2000", "Mar 2007", "Visa, Inc", "Led testing and qualification efforts for Verified by Visa(tm) certifications",
-  
-  # The Globeset Experience
-  
-  "Software Engineer", "Feb 1998", "Nov 2000", "Globeset, Inc", "Introduced Java to the development process. Wrote monitor applications to ensure highly-available services",
+  "Software Engineer", "Nov 2000", "Mar 2007", "Visa, Inc", "Led testing and qualification efforts for Verified by Visa(tm) certifications"
 )
 
 my_experience %>% detailed_entries(
@@ -152,13 +153,15 @@ my_experience %>% detailed_entries(
 )
 
 ```
+
 # Education
+
 ```{r education}
 
 my_education <- tibble::tribble(
   ~title, ~end, ~school,
   "Complex Systems Summer School", "2015", "The Santa Fe Institute",
-  "BSc - Electrical Engineering", "1990", "University of Southern California",
+  "BS - Electrical Engineering", "1990", "University of Southern California",
   "BA - Mathematics", "1990", "Carroll College"
 )
 
@@ -172,6 +175,7 @@ my_education %>% detailed_entries(
 ```
 
 # Volunteering
+
 ```{r volunteer}
 
 my_volunteer <- tibble::tribble(
@@ -191,6 +195,7 @@ my_volunteer %>% detailed_entries(
 ```
 
 # Certifications
+
 ```{r certifications}
 
 
@@ -210,21 +215,18 @@ my_certs %>% brief_entries(
 )
 ```
 
-
 # Technical Expertise
+
 ```{r techexpert}
 my_expertise <- tibble::tribble(
   ~item, ~desc,
+  "Leadership and Strategy", "Executive collaboration, Organization management, Culture change",
   "Languages", "Python, R, SQL, Java",
-  "Big Data and Streaming", "Spark, Kafka, ElasticSearch, Hadoop, Hive, HDFS",
-  "Datasets", "JSON, Schematic, CSV, Schema Design, ",
-  "DevOps", "Kubernetes, AWS, Kubeflow, Docker",
   "Machine Learning", "Tensorflow, Keras, Pandas, Tidyverse",
   "Supervised Learning", "Regression, Random Forest, Gradient Boosted Trees",
   "Unsupervised Learning", "K-means and hierarchical clustering, PCA, tSNE",
   "Deep Learning", "CNN, RNN, LSTM, Active Learning, Transfer Learning",
-  "Version Control", "Git, DVC",
-  "Engineering", "REST, Object Oriented Design, Test Driven Develompment"
+  "Engineering", "REST, Object Oriented Design, Test Driven Development"
 )
  
 my_expertise %>% 
@@ -233,6 +235,7 @@ my_expertise %>%
 ```
 
 # Patents
+
 ```{r patents}
 my_inventions <- tibble::tribble(
   ~name, ~id, ~issued, ~issuer,
